app/assets/stylesheets/documentable.scss
.document {
  .button {
    font-weight: normal;
  }

  .progress-bar {
    width: 100%;
    background-color: $light-gray;
  }

  .file-name {
    margin-top: $line-height / 2;
  }

  .loading-bar {
    height: 5px;
    width: 0;
    transition: width 500ms ease-out;

    &.uploading {
      background-color: $dark-gray;
    }

    &.complete {
      background-color: $success-color;
      width: 100%;
      margin-top: $line-height * 2;
    }

    &.errors {
      background-color: $alert-color;
      width: 100%;
    }
  }

  .loading-bar.no-transition {
    transition: none;
  }
}

